--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hola bebe
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    
+    <title>Mi primera pagina web</title>
+</head>
+<body>
+    <p>Hola bebe que tal? Hola mundo</p>
+</body>
+</html>
