--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Mi primera pagina web</title>
 </head>
 <body>
-    <p>Hola bebe que tal? Hola mundo</p>
+    <p>Hola mundo</p>
 </body>
 </html>
