--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    
+<html>
+<head>  
     <title>Mi primera pagina web</title>
 </head>
 <body>
-    <p>Hola mundo</p>
+    hola mundo
 </body>
 </html>
