--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <title>Mi primera pagina web</title>
 </head>
 <body>
-    hola mundo
+    <h1>Mi Primer Heading</h1>
+    <h2>Mi segundo Heading</h2>
+    <h3>Mi Tercer Heading</h3>
+    <h4>Mi Cuarto Heading</h4>
+    <h5>Mi Quinto Heading</h5>
+    <h6>Mi Sexto Heading</h6>
+    <p>Esto seria un parrafo</p>
+    <p>Cada vez que coloquemos una linea con las P estamos separando el parrafo, como un punto y aparte</p>
 </body>
 </html>
