--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
     <h6>Mi Sexto Heading</h6>
     <p>Esto seria un parrafo</p>
     <p>Cada vez que coloquemos una linea con las P estamos separando el parrafo, como un punto y aparte</p>
+    <hr>
+    <h2>Separando secciones</h2>
+    <p>Con hr podemos separar secciones de la app con una linea</p>
+    <!-- Finalmente esta es la etiqueta para comentar en html -->
+     <p>Ahora vamos a hacer un texto mucho mas largo y </span style="color:blue">es para mostrar la utilidad de la etiqueta span.</span> esta sirve para referenciar partes del texto para utilizarlas luego.
+    </p>
 </body>
 </html>
