--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2>Separando secciones</h2>
     <p>Con hr podemos separar secciones de la app con una linea</p>
     <!-- Finalmente esta es la etiqueta para comentar en html -->
-     <p>Ahora vamos a hacer un texto mucho mas largo y </span style="color:blue">es para mostrar la utilidad de la etiqueta span.</span> esta sirve para referenciar partes del texto para utilizarlas luego.
+     <p>Ahora vamos a hacer un texto mucho mas largo y <span style="color:blue">es para mostrar la utilidad de la etiqueta span.</span> esta sirve para referenciar partes del texto para utilizarlas luego.
     </p>
 </body>
 </html>
