--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
         Ahora vamos hacer un texto cualquiera para mostrar la utilidad de 'br'.<br>
         Esta sirve para poder hacer saltos de linea
     </p>
+    <a href="https://www.google.co.es">Link dentro de mi pagina</a>
+    <a target="_blank" href="https://www.google.co.es">Link en nueva ventana</a>
 </body>
 </html>
