--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     </p>
     <a href="https://www.google.com">Link dentro de mi pagina</a><br>
     <a target="_blank" href="https://www.google.com">Link en nueva ventana</a>
+    <img />
 </body>
 </html>
