--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </p>
     <a href="https://www.google.com">Link dentro de mi pagina</a><br>
     <a target="_blank" href="https://www.google.com">Link en nueva ventana</a>
-    <img />
+    <img src="IMG_0168.png" />
 </body>
 </html>
