--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         Esta sirve para poder hacer saltos de linea
     </p>
     <a href="https://www.google.com">Link dentro de mi pagina</a><br>
-    <a target="_blank" href="https://www.google.com">Link en nueva ventana</a>
+    <a target="_blank" href="https://www.google.com">Link en nueva ventana</a><br>
     <img src="img/IMG_0168.png" />
 </body>
 </html>
