--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </p>
     <a href="https://www.google.com">Link dentro de mi pagina</a><br>
     <a target="_blank" href="https://www.google.com">Link en nueva ventana</a><br>
-    <img src="img/IMG_0168.png" />
+    <img src="img/IMG_0168.png" width="200"/>
 </body>
 </html>
