--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
     <a href="https://www.google.com">Link dentro de mi pagina</a><br>
     <a target="_blank" href="https://www.google.com">Link en nueva ventana</a><br>
     <img src="img/IMG_0168.png" width="200"/>
+    <hr>
+    <form>
+        <label for="nombre" >Nombre</label>
+        <input id="nombre" />
+    </form>
 </body>
 </html>
