--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <hr>
     <form>
         <label for="nombre" >Nombre</label>
-        <input id="nombre" />
+        <input id="nombre" placeholder="Escribe tu nombre" name="nombre"/>
     </form>
 </body>
 </html>
