--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
     <hr>
     <form>
         <label for="nombre" >Nombre</label>
-        <input id="nombre" placeholder="Escribe tu nombre" name="nombre"/>
+        <input id="nombre" type="text" placeholder="Escribe tu nombre" name="nombre"/>
+        <br>
+        <label for="apellido" >Apellido</label>
+        <input id="apellido" type="text" placeholder="Escribe tu apellido" name="apellido"/>
     </form>
 </body>
 </html>
