--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <br>
         <label for="apellido" >Apellido</label>
         <input id="apellido" type="text" placeholder="Escribe tu apellido" name="apellido"/>
+        <textarea id="comentario" placeholder="Deja tu comentario" name="comentario" ></textarea>
     </form>
 </body>
 </html>
