--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <input id="nombre" type="text" placeholder="Escribe tu nombre" name="nombre"/>
         <br>
         <label for="apellido" >Apellido</label>
-        <input id="apellido" type="text" placeholder="Escribe tu apellido" name="apellido"/>
-        <textarea id="comentario" placeholder="Deja tu comentario" name="comentario" ></textarea>
+        <input id="apellido" type="text" placeholder="Escribe tu apellido" name="apellido"/><br>
+        <textarea cols="50" rows="10" id="comentario" placeholder="Deja tu comentario" name="comentario" ></textarea>
     </form>
 </body>
 </html>
