--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
         <textarea cols="50" rows="10" id="comentario" placeholder="Deja tu comentario" name="comentario" ></textarea>
         <br>
 
+        <h3>Valor por defecto</h3>
+        <p>Asi podemos colocar los input con valores por defecto</p>
+        <label for="nombre" >Nombre</label>
+        <input value="Marisol" id="nombre" type="text" placeholder="Escribe tu nombre" name="nombre"/>
+        <br>
+
+        <label for="apellido" >Apellido</label>
+        <input value="Solimar" id="apellido" type="text" placeholder="Escribe tu apellido" name="apellido"/>
+        <br>
+
+        <label for="comentario">Comentario</label>
+        <textarea cols="50" rows="10" id="comentario" placeholder="Deja tu comentario" name="comentario" >Asi puedo poner un valor por defecto</textarea>
+        <br>
+
         <input type="submit">
     </form>
 </body>
