--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         Ahora vamos hacer un texto cualquiera para mostrar la utilidad de 'br'.<br>
         Esta sirve para poder hacer saltos de linea
     </p>
-    <a href="https://www.google.com">Link dentro de mi pagina</a><br>
-    <a target="_blank" href="https://www.google.com">Link en nueva ventana</a><br>
+    <a href="https://www.google.com">Link dentro de mi pagina</a>
+    <br>
+    <a target="_blank" href="https://www.google.com">Link en nueva ventana</a>
     <img src="img/IMG_0168.png" width="200"/>
     <hr>
 
@@ -43,19 +44,21 @@
 
         <h3>Valor por defecto</h3>
         <p>Asi podemos colocar los input con valores por defecto</p>
-        <label for="nombre" >Nombre</label>
-        <input value="Marisol" id="nombre" type="text" placeholder="Escribe tu nombre" name="nombre"/>
+        <label for="nombre1" >Nombre</label>
+        <input value="Marisol" id="nombre1" type="text" placeholder="Escribe tu nombre" name="nombre1"/>
         <br>
 
-        <label for="apellido" >Apellido</label>
-        <input value="Solimar" id="apellido" type="text" placeholder="Escribe tu apellido" name="apellido"/>
+        <label for="apellido1" >Apellido</label>
+        <input value="Solimar" id="apellido1" type="text" placeholder="Escribe tu apellido" name="apellido1"/>
         <br>
 
-        <label for="comentario">Comentario</label>
-        <textarea cols="50" rows="10" id="comentario" placeholder="Deja tu comentario" name="comentario" >Asi puedo poner un valor por defecto</textarea>
+        <label for="comentario1">Comentario</label>
+        <textarea id="comentario1" placeholder="Deja tu comentario" name="comentario1" >Asi puedo poner un valor por defecto</textarea>
         <br>
 
-        <input type="submit">
+        <button type="button">Tipo Boton</button>
+        <button type="reset">Tipo Reset</button>
+        <button type="submit">Tipo Submit</button>
     </form>
 </body>
 </html>
