--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!--'ol' Lista ordenada-->
     <ol>
-        <li>Elemento 1</li>
+        <li value="50" >Elemento 1</li> <!-- Con 'value' podemos indicar desde que numero comienza la lista ordenada -->
         <li>Elemento 2</li>
         <li>Elemento 3</li>
         <li>Elemento 4</li>
