--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <ol>
         <li value="50" >Elemento 1</li> <!-- Con 'value' podemos indicar desde que numero comienza la lista ordenada -->
         <li>Elemento 2</li>
+        <li>
+            <ol>
+                <li>Sub elemento 1</li>
+                <li>Sub elemento 2</li>
+            </ol>
+        </li>
         <li>Elemento 3</li>
         <li>Elemento 4</li>
     </ol>
