--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <li>Elemento 2</li>
         <li>
             <ol>
-                <li>Sub elemento 1</li>
-                <li>Sub elemento 2</li>
+                <li style="list-style: lower-alpha;">Sub elemento 1</li>
+                <li style="list-style: lower-alpha;">Sub elemento 2</li>
             </ol>
         </li>
         <li>Elemento 3</li>
