--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <h1>Titulo</h1>
     <h2>Subtitulo</h2>
 
+    <!-- Tablas -->
+    <table>
+        <tr>
+            <th>Producto</th>
+            <th>Precio</th>
+        </tr>
+        <tr>
+            <td>Spotify</td>
+            <td>Gratis</td>
+        </tr>
+        <tr>
+            <td>Arepa</td>
+            <td>10$</td>
+        </tr>
+    </table>
+
     <!-- 'ul' Listas no ordenadas -->
     <ul>
         <li>Elemento 1</li>
