--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h2>Subtitulo</h2>
 
     <!-- Tablas -->
-    <table>
+    <table style="border: 1px solid black;">
         <tr>
             <th>Producto</th>
             <th>Precio</th>
@@ -20,6 +20,10 @@
         <tr>
             <td>Arepa</td>
             <td>10$</td>
+        </tr>
+        <tr>
+            <td>No se que producto poner</td>
+            <td>130$</td>
         </tr>
     </table>
 
