--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html>
 <head>  
     <title>Mi primera pagina web</title>
+    <style>
+        table, th, td {
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>Titulo</h1>
     <h2>Subtitulo</h2>
 
     <!-- Tablas -->
-    <table style="border: 1px solid black;">
+    <table>
         <tr>
             <th>Producto</th>
             <th>Precio</th>
