--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Subtitulo</h2>
 
     <!-- Tablas -->
-    <table>
+    <table style="width: 500px;">
         <tr>
             <th>Producto</th>
             <th>Precio</th>
