--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 
     <!-- Tablas -->
     <table style="width: 500px;">
-        <tr>
-            <th>Producto</th>
-            <th>Precio</th>
-        </tr>
+        <thead>
+            <tr>
+                <th>Producto</th>
+                <th>Precio</th>
+            </tr>
+        </thead>
         <tr>
             <td>Spotify</td>
             <td>Gratis</td>
