--- a/index.html
+++ b/index.html
@@ -20,18 +20,20 @@
                 <th>Precio</th>
             </tr>
         </thead>
-        <tr>
-            <td>Spotify</td>
-            <td>Gratis</td>
-        </tr>
-        <tr>
-            <td>Arepa</td>
-            <td>10$</td>
-        </tr>
-        <tr>
-            <td>No se que producto poner</td>
-            <td>130$</td>
-        </tr>
+        <tbody>
+            <tr>
+                <td>Spotify</td>
+                <td>Gratis</td>
+            </tr>
+            <tr>
+                <td>Arepa</td>
+                <td>10$</td>
+            </tr>
+            <tr>
+                <td>No se que producto poner</td>
+                <td>130$</td>
+            </tr>
+        </tbody>
     </table>
 
     <!-- 'ul' Listas no ordenadas -->
