--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                 <td>130$</td>
             </tr>
         </tbody>
+        <tfoot>
+            <td></td>
+            <td>160$</td>
+        </tfoot>
     </table>
 
     <!-- 'ul' Listas no ordenadas -->
