--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </tbody>
         <tfoot>
             <td></td>
-            <td>160$</td>
+            <td>Total: 160$</td>
         </tfoot>
     </table>
 
