--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Blog de Pepito</h1>
+    </header>
+    <section>
+        <article>
+            <h2>Titulo de mi post</h2>
+            <p>Descripcion de mi post</p>
+            <img src="img/IMG_0168.png" alt="100">
+            <p>texto del articulo que hay aca, y es texto de prueba</p>
+        </article>
+    </section>
+    <footer></footer>
 </body>
 </html>
