--- a/blog.html
+++ b/blog.html
@@ -12,8 +12,14 @@
         <article>
             <h2>Titulo de mi post</h2>
             <p>Descripcion de mi post</p>
-            <img src="img/IMG_0168.png" alt="100">
-            <p>texto del articulo que hay aca, y es texto de prueba</p>
+            <img src="img/IMG_0168.png" alt="50">
+            <p>Texto del articulo que hay aca, y es texto de prueba</p>
+        </article>
+        <article>
+            <h2>Titulo de mi post2</h2>
+            <p>Descripcion de mi post</p>
+            <img src="img/IMG_0168.png" alt="50">
+            <p>Texto del articulo que hay aca, y es texto de prueba</p>
         </article>
     </section>
     <footer></footer>
