--- a/blog.html
+++ b/blog.html
@@ -12,16 +12,25 @@
         <article>
             <h2>Titulo de mi post</h2>
             <p>Descripcion de mi post</p>
-            <img src="img/IMG_0168.png" alt="50">
+            <img src="img/IMG_0168.png" alt="10">
             <p>Texto del articulo que hay aca, y es texto de prueba</p>
         </article>
         <article>
-            <h2>Titulo de mi post2</h2>
+            <h2>Titulo de mi post 2</h2>
             <p>Descripcion de mi post</p>
-            <img src="img/IMG_0206.png" alt="50">
+            <img src="img/IMG_0206.png" alt="10">
+            <p>Texto del articulo que hay aca, y es texto de prueba</p>
+        </article>
+        <article>
+            <h2>Titulo de mi post 3</h2>
+            <p>Descripcion de mi post</p>
+            <img src="img/IMG_0168.png" alt="10">
             <p>Texto del articulo que hay aca, y es texto de prueba</p>
         </article>
     </section>
-    <footer></footer>
+    <footer>
+        <a href="mailto:nicolas@gmail.com">Contactame por correo aqui</a>
+        <p>Copyright 2021</p>
+    </footer>
 </body>
 </html>
