--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,7 @@
         </article>
     </section>
     <footer>
+        <a href="#titulo">Ir arriba</a>
         <a href="mailto:nicolas@gmail.com">Contactame por correo aqui</a>
         <p>Copyright 2021</p>
     </footer>
